# libyaml

./: configure.ac
src/: Makefile.am  emitter.c  parser.c  reader.c  scanner.c
tests/: run-all-tests.sh  run-emitter.c  test-reader.c
